# Game-of-Seyeds

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  compile_flags.txt
CMake/build-OpenSSL/: CMakeLists.txt  how_to.md
src/: main.cpp
src/api/: opentdb.cpp  opentdb.hpp
src/gui/: frame.hpp  main.cpp  main.hpp  menu.cpp  menu.hpp  widgets.cpp  widgets.hpp  window.cpp  window.hpp
src/gui/frames/: menu.cpp  menu.hpp  pvp_local.cpp  pvp_local.hpp  pvp_menu.cpp  pvp_menu.hpp  survival.cpp  survival.hpp
src/utils/: exceptions.hpp  json.cpp  json.hpp  utils.cpp  utils.hpp
